[gd_scene load_steps=12 format=1]

[ext_resource path="res://title.gd" type="Script" id=1]
[ext_resource path="res://buttons/blueSheet.blue_button01.atex" type="Texture" id=2]
[ext_resource path="res://buttons/blueSheet.blue_button00.atex" type="Texture" id=3]
[ext_resource path="res://buttons.gd" type="Script" id=4]
[ext_resource path="res://fonts/kenpixel.fnt" type="BitmapFont" id=5]
[ext_resource path="res://tiles/tiles.tres" type="TileSet" id=6]
[ext_resource path="res://red_alien.tscn" type="PackedScene" id=7]
[ext_resource path="res://blue_alien.tscn" type="PackedScene" id=8]
[ext_resource path="res://grey_alien.tscn" type="PackedScene" id=9]
[ext_resource path="res://yellow_alien.tscn" type="PackedScene" id=10]
[ext_resource path="res://green_alien.tscn" type="PackedScene" id=11]

[node name="root" type="Node"]

script/script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 440.0
margin/top = 246.0
margin/right = 630.0
margin/bottom = 295.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 2 )
textures/hover = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 4 )

[node name="Label" type="Label" parent="TextureButton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 10.0
margin/right = 130.0
margin/bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "Start"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 6 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 589823, 1, 524289, 1, 524291, 1, 524293, 1, 524295, 1, 524297, 1, 524299, 1, 524301, 1, 524303, 1 )

[node name="red_alien" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 250, 380 )
transform/scale = Vector2( 1, 1 )

[node name="blue_alien" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 840, 380 )
transform/scale = Vector2( 1, 1 )

[node name="grey_alien" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 700, 380 )
transform/scale = Vector2( 1, 1 )

[node name="yellow_alien" parent="." instance=ExtResource( 10 )]

transform/pos = Vector2( 550, 380 )
transform/scale = Vector2( 1, 1 )

[node name="green_alien" parent="." instance=ExtResource( 11 )]

transform/pos = Vector2( 400, 380 )
transform/scale = Vector2( 1, 1 )

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
size_flags/stretch_ratio = 50.0
margin/left = 181.0
margin/top = 69.0
margin/right = 323.0
margin/bottom = 87.0
custom_fonts/font = ExtResource( 5 )
custom_constants/shadow_offset_x = 10
text = "Mighty Aliens"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]


